trying to fix header not showing on mobile resize

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,22 +7,14 @@
   padding: 30px 40px;
   z-index: 1000;
   position: fixed;
-  /* height: 0; */
-  /* padding: 0; */
+
   top: 0;
   left: 0px;
-}
-
-@media (max-width: 767px) {
-  .header {
-    padding: 20px;
-  }
 }
 
 .header .logo {
   max-width: 95px;
   max-height: 70px;
-  /* margin: 40px 0 0 40px; */
   z-index: 130;
 
   cursor: pointer;
@@ -65,7 +57,6 @@
 
 .header > .hamburger {
   z-index: 130;
-  /* margin: 40px 40px 0 0; */
 }
 
 .header .menu .hamburger {
@@ -348,6 +339,14 @@
 }
 
 @media (max-width: 767px) {
+  .header {
+    padding: 20px;
+    position: sticky;
+    background: rgb(255 255 255 / 80%);
+  }
+  .header .hamburger > span {
+    display: none;
+  }
   .header .logo {
     max-width: 60px;
   }
